--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start-api": "node ./business-layer/business-layer-user.js",
     "start-static-html": "node ./presentation-layer/server-static.js",
     "all-in-one": "node ./business-layer/business-layer-user.js & node ./presentation-layer/server-static.js &",
-    "electron": "electron ."
+    "dev": "electron .",
+    "all": "concurrently \"node ./business-layer/business-layer-user.js\"  \"electron .\""
   },
   "repository": {
     "type": "git",
